--- a/config.html
+++ b/config.html
@@ -7,34 +7,34 @@
     <link rel="stylesheet" href="src/style/back.css">
 </head>
 <body>
-    <div id="topo">
-        <button id="btLimpar">Limpar Lista</button>
-      <h1>Dia a Dia</h1>
-      <label for="">
-        <h4>Horas trabalho dia</h4>
-        <input type="number" value="8" oninput="barId.max = this.value">
-      </label>
-        <div>
-          <br>
-        <progress value="0" max="100" id="totalBar"> </progress>
-          </div>
-        <hr>
+  <div id="topo">
+    <button id="btLimpar">Limpar Lista</button>
+  <h1>Dia a Dia</h1>
+  <label for="">
+    <h4>Horas trabalho dia</h4>
+    <input type="number" id="inputTotal" value="8"  oninput="setMaxbar(this.value)">
+  </label>
+    <div>
+      <br>
+          <progress value="0" max="100" id="totalBar"></progress>
       </div>
-      <div id="task">
-        <p>Descricao da Atividade</p>
-        <input name="descricao" id="descricao"></input>
-        <br>
-        <p>Tempo da Atividade:<strong id="rangeValue">00:00h = 0</strong></p>
-        <input type="range" id="barId" step="0.1" min="0" max="8" value="0" oninput="rangeValue.innerText =  convert(this.value).tempo">
-        
-        <br>
-        <div>
-          <br>
-        <button id="criarTask">Salvar Item</button>
-        </div>
-      </div>
-      <div id="tasks">
-      </div>      
+    <hr>
+  </div>
+  <div id="task">
+    <p>Descricao da Atividade</p>
+    <input name="descricao" id="descricao"></input>
+    <br>
+    <p>Tempo da Atividade:<strong id="rangeValue">00:00h = 0</strong></p>
+    <input type="range" id="barId" step="0.1" min="0.00" max="8" value="0" oninput="setRangeValue(this.value)">
+    <br>
+    <div>
+      <br>
+    <button id="criarTask">Salvar Item</button>
+    </div>
+  </div>
+  <div id="tasks">
+  </div>
+      
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/src/js/back.js"></script>
