--- a/config.html
+++ b/config.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="src/style/back.css">
 </head>
 <body>
+  <div id="statusOffLine" style="display: none">Voce nao esta conecatado</div>
   <div class="min-h-screen bg-gray-900 font-sans">
     <div class="container mx-20 flex flex-row">
       <div class="basis-1/2">
