--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
       <div id="on" class="hidden">
         <div class="flex items-center space-x-4 rtl:space-x-reverse">
           <div class="min-w-0 flex-1 pl-4 ">
-            <div class=" mb-1 min-w-0 flex-1 text-base font-medium dark:text-white drag">
+            <div class=" mb-1 min-w-0 flex-1 text-base font-medium text-white drag">
               <p id="activityTitle" class="truncate">...</p>
             </div>
-            <div class=" mb-2 h-1.5 w-full rounded-full bg-gray-200 dark:bg-gray-700">
-              <div id="barraAtual" class="h-1.5 animate-pulse rounded-full bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl" style="width: 100%"></div>
+            <div class=" mb-2 h-1.5 w-full rounded-full  bg-gray-700">
+              <div id="barraAtual" class="h-1.5 animate-pulse rounded-full bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl" style="width: 20%"></div>
             </div>
 
-            <span id="finish" class=" dark:text-gree-400 me-2 inline-flex hidden animate-bounce items-center justify-center rounded border border-green-400 bg-green-100 px-2.5 py-0.5 text-sm font-semibold text-green-600 hover:bg-green-200 dark:bg-gray-700">Finalizado</span>
+            <span id="finish" class=" text-gree-400 me-2 inline-flex hidden animate-bounce items-center justify-center rounded border border-green-400  px-2.5 py-0.5 text-sm font-semibold text-green-600 hover:bg-green-200 bg-gray-700">Finalizado</span>
 
-            <span id="countTime" class=" inline-flex animate-pulse items-center rounded border border-blue-400 bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800 dark:bg-gray-700 dark:text-blue-400">
+            <span id="countTime" class=" inline-flex animate-pulse items-center rounded border border-blue-400  px-2.5 py-0.5 text-xs font-medium  bg-gray-700 text-blue-400">
               <svg class="me-1.5 h-3 w-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                 <path d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0Zm3.982 13.982a1 1 0 0 1-1.414 0l-3.274-3.274A1.012 1.012 0 0 1 9 10V6a1 1 0 0 1 2 0v3.586l2.982 2.982a1 1 0 0 1 0 1.414Z" />
               </svg>
               <p id="runTime">00:00:00</p>
             </span>
 
-            <span id="timeStopCount" class=" inline-flex animate-pulse items-center rounded border border-red-400 bg-red-100 px-2.5 py-0.5 text-xs font-medium text-red-800 dark:bg-gray-700 dark:text-red-400">
-              <svg class=" me-1.5 h-3 w-3 text-gray-800 dark:text-red-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+            <span id="timeStopCount" class=" inline-flex animate-pulse items-center rounded border border-red-400  px-2.5 py-0.5 text-xs font-medium  bg-gray-700 text-red-400">
+              <svg class=" me-1.5 h-3 w-3  text-red-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                 <path fill-rule="evenodd" d="M8 5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H8Zm7 0a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1Z" clip-rule="evenodd" />
               </svg>
 
@@ -35,40 +35,40 @@
             </span>
 
             <div class="float-end me-2 inline-flex rounded-md shadow-sm" role="group">
-              <button type="button" id="btBack" class="inline-flex items-center rounded-s-lg border border-gray-200 bg-white px-2 py-1 text-xs text-gray-900 hover:bg-gray-100 focus:z-10 dark:border-gray-700 dark:bg-gray-800 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white dark:focus:text-white">
-                <svg class="h-3 w-3 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 24 24">
+              <button type="button" id="btBack" class="inline-flex items-center rounded-s-lg border px-2 py-1 text-xs  focus:z-10 border-gray-700 bg-gray-800 text-white hover:bg-gray-700 hover:text-white focus:text-white">
+                <svg class="h-3 w-3 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 24 24">
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 19-7-7 7-7" />
                 </svg>
               </button>
 
-              <button type="button" id="btNext" class="inline-flex items-center rounded-e-lg border border-gray-200 bg-white px-2 py-1 text-xs text-gray-900 hover:bg-gray-100 focus:z-10 dark:border-gray-700 dark:bg-gray-800 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white dark:focus:text-white">
-                <svg class="h-3 w-3 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 24 24">
+              <button type="button" id="btNext" class="inline-flex items-center rounded-e-lg border  px-2 py-1 text-xs focus:z-10 border-gray-700 bg-gray-800 text-white hover:bg-gray-700 hover:text-white focus:text-white">
+                <svg class="h-3 w-3 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 24 24">
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7" />
                 </svg>
               </button>
             </div>
 
           </div>
-          <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
+          <div class="inline-flex items-center text-base font-semibold text-white">
             <div class="flex flex-col p-1">
-              <button type="button" id="control" class="rounded-t-xl inline-flex items-center border border-gray-200 bg-white px-1 py-1 text-xs text-gray-900 hover:bg-gray-100 focus:z-10 dark:border-gray-700 dark:bg-gray-800 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white dark:focus:text-white">
-                <svg id="play" class="h-5 w-5 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+              <button type="button" id="control" class="rounded-t-xl inline-flex items-center border px-1 py-1 text-xs focus:z-10 border-gray-700 bg-gray-800 text-white hover:bg-gray-700 hover:text-white focus:text-white">
+                <svg id="play" class="h-5 w-5 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                   <path fill-rule="evenodd" d="M8.6 5.2A1 1 0 0 0 7 6v12a1 1 0 0 0 1.6.8l8-6a1 1 0 0 0 0-1.6l-8-6Z" clip-rule="evenodd" />
                 </svg>
 
-                <svg id="pause" class="hidden h-5 w-5 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                <svg id="pause" class="hidden h-5 w-5 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                   <path fill-rule="evenodd" d="M8 5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H8Zm7 0a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1Z" clip-rule="evenodd" />
                 </svg>
 
-                <svg id="lock" class="hidden h-5 w-5 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                <svg id="lock" class="hidden h-5 w-5  text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                   <path fill-rule="evenodd" d="M8 10V7a4 4 0 1 1 8 0v3h1a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h1Zm2-3a2 2 0 1 1 4 0v3h-4V7Zm2 6a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1Z" clip-rule="evenodd" />
                 </svg>
               </button>
 
 
 
-              <button id="exitApp" type="button" class="rounded-b-xl inline-flex items-center  border border-gray-200 bg-white px-1 py-1 text-xs text-gray-900 hover:bg-gray-100 focus:z-10 dark:border-gray-700 dark:bg-gray-800 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white dark:focus:text-white">
-                <svg class="h-5 w-5 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+              <button id="exitApp" type="button" class="rounded-b-xl inline-flex items-center  border  px-1 py-1 text-xs focus:z-10 border-gray-700 bg-gray-800 text-white hover:bg-gray-700 hover:text-white focus:text-white">
+                <svg class="h-5 w-5 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                   <path fill-rule="evenodd" d="M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Zm7.707-3.707a1 1 0 0 0-1.414 1.414L10.586 12l-2.293 2.293a1 1 0 1 0 1.414 1.414L12 13.414l2.293 2.293a1 1 0 0 0 1.414-1.414L13.414 12l2.293-2.293a1 1 0 0 0-1.414-1.414L12 10.586 9.707 8.293Z" clip-rule="evenodd" />
                 </svg>
               </button>
@@ -83,8 +83,8 @@
             <img class="h-12 w-12 rounded-full" src="src/favicon.ico" />
           </div>
           <div class="min-w-0 flex-1">
-            <p class="truncate font-medium text-gray-900  dark:text-white">Olá</p>
-            <p class="truncate text-gray-500 text-sm dark:text-gray-400" id="serverMsg">...</p>
+            <p class="truncate font-medium text-white">Olá</p>
+            <p class="truncate text-sm text-gray-400" id="serverMsg">...</p>
           </div>
         </div>
       </div>
