--- a/src/painel.html
+++ b/src/painel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorkTimeBar</title>
-    <link rel="stylesheet" href="src/style/back.css">
+    <link rel="stylesheet" href="src/style/backoff.css">
     <link rel="icon" href="src/favicon.ico">
 </head>
 <body>
@@ -43,7 +43,7 @@
           <span class="absolute -bottom-6 end-0 text-sm text-gray-500 " id="maxHour">8h</span>
         </div>
         <div class="mt-14 flex justify-center">
-          <button type="button" id="newTask" class="mb-2 me-2 cursor-not-allowed rounded-lg bg-blue-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none ">Cadastrar Atividade</button>
+          <button type="button" id="newTask" class="mb-2 me-2  rounded-lg bg-blue-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none ">Cadastrar Atividade</button>
         </div>
         
       </div>
@@ -102,5 +102,5 @@
 </body>
 
 <script src="/socket.io/socket.io.js"></script>
-<script type="module" src="/src/js/back.js"></script>
+<script type="module" src="/src/js/backoff.js"></script>
 </html>
