--- a/src/painel.html
+++ b/src/painel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorkTimeBar</title>
-    <link rel="stylesheet" href="src/style/backoff.css">
+    <link rel="stylesheet" href="src/style/main.css">
     <link rel="icon" href="src/favicon.ico">
 </head>
 <body>
